// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.UI.StatusIndicator closing should render correctly 1`] = `
<Styled(styled.div)
  variant="closing"
>
  <WrappedSpinner />
</Styled(styled.div)>
`;

exports[`component.UI.StatusIndicator offline should render correctly 1`] = `
<Styled(styled.div)
  variant="offline"
>
  <FaCircle
    size="0.5em"
  />
</Styled(styled.div)>
`;

exports[`component.UI.StatusIndicator online should render correctly 1`] = `
<Styled(styled.div)
  variant="online"
>
  <FaCircle
    size="0.5em"
  />
</Styled(styled.div)>
`;

exports[`component.UI.StatusIndicator pending should render correctly 1`] = `
<Styled(styled.div)
  variant="pending"
>
  <FaCircle
    size="0.5em"
  />
</Styled(styled.div)>
`;
